--- a/MLcourse/linear-regression.html
+++ b/MLcourse/linear-regression.html
@@ -25,7 +25,7 @@
 <meta name="author" content="Mohamad Ghassany">
 
 
-<meta name="date" content="2018-01-17">
+<meta name="date" content="2018-01-18">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -160,9 +160,9 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 <li class="chapter" data-level="2.3.1" data-path="multiple-linear-regression.html"><a href="multiple-linear-regression.html#other-considerations-in-regression-model"><i class="fa fa-check"></i><b>2.3.1</b> Other Considerations in Regression Model</a></li>
 </ul></li>
 <li class="chapter" data-level="2.4" data-path="multiple-linear-regression.html"><a href="multiple-linear-regression.html#how-to-select-the-best-performing-model"><i class="fa fa-check"></i><b>2.4</b> How to select the best performing model</a><ul>
-<li class="chapter" data-level="2.4.1" data-path="multiple-linear-regression.html"><a href="multiple-linear-regression.html#use-the-adjusted-r2-for-univariate-models"><i class="fa fa-check"></i><b>2.4.1</b> Use the Adjusted R2 for univariate models</a></li>
-<li class="chapter" data-level="2.4.2" data-path="multiple-linear-regression.html"><a href="multiple-linear-regression.html#have-a-look-at-the-residuals-or-error-terms"><i class="fa fa-check"></i><b>2.4.2</b> Have a look at the residuals or error terms</a></li>
-<li class="chapter" data-level="2.4.3" data-path="multiple-linear-regression.html"><a href="multiple-linear-regression.html#histogram-of-residuals"><i class="fa fa-check"></i><b>2.4.3</b> Histogram of residuals</a></li>
+<li><a href="multiple-linear-regression.html#use-the-adjusted-r2-for-univariate-models">Use the Adjusted <span class="math inline">\(R^2\)</span> for univariate models</a></li>
+<li class="chapter" data-level="" data-path="multiple-linear-regression.html"><a href="multiple-linear-regression.html#have-a-look-at-the-residuals-or-error-terms"><i class="fa fa-check"></i>Have a look at the residuals or error terms</a></li>
+<li class="chapter" data-level="" data-path="multiple-linear-regression.html"><a href="multiple-linear-regression.html#histogram-of-residuals"><i class="fa fa-check"></i>Histogram of residuals</a></li>
 </ul></li>
 </ul></li>
 <li class="appendix"><span><b>Appendix</b></span></li>
@@ -377,9 +377,9 @@ Before explaining ANOVA, it is important to recall an interesting result: <em>th
 \end{align*}\]</span>
 <p>The ANOVA decomposition considers the following measures of variation related with the response:</p>
 <ul>
-<li><span class="math inline">\(\text{SST}=\sum_{i=1}^n\left(Y_i-\bar Y\right)^2\)</span>, the <strong>total sum of squares</strong>. This is the <em>total variation</em> of <span class="math inline">\(Y_1,\ldots,Y_n\)</span>, since <span class="math inline">\(\text{SST}=ns_y^2\)</span>, where <span class="math inline">\(s_y^2\)</span> is the sample variance of <span class="math inline">\(Y_1,\ldots,Y_n\)</span>.</li>
-<li><span class="math inline">\(\text{SSR}=\sum_{i=1}^n\left(\hat Y_i-\bar Y\right)^2\)</span>, the <strong>regression sum of squares</strong><a href="#fn1" class="footnoteRef" id="fnref1"><sup>1</sup></a>. This is the variation explained by the regression line, that is, <em>the variation from <span class="math inline">\(\bar Y\)</span> that is explained by the estimated conditional mean <span class="math inline">\(\hat Y_i=\hat\beta_0+\hat\beta_1X_i\)</span></em>. <span class="math inline">\(\text{SSR}=ns_{\hat y}^2\)</span>, where <span class="math inline">\(s_{\hat y}^2\)</span> is the sample variance of <span class="math inline">\(\hat Y_1,\ldots,\hat Y_n\)</span>.</li>
-<li><span class="math inline">\(\text{SSE}=\sum_{i=1}^n\left(Y_i-\hat Y_i\right)^2\)</span>, the <strong>sum of squared errors</strong><a href="#fn2" class="footnoteRef" id="fnref2"><sup>2</sup></a>. Is the variation around the conditional mean. Recall that <span class="math inline">\(\text{SSE}=\sum_{i=1}^n \hat\varepsilon_i^2=(n-2)\hat\sigma^2\)</span>, where <span class="math inline">\(\hat\sigma^2\)</span> is the sample variance of <span class="math inline">\(\hat \varepsilon_1,\ldots,\hat \varepsilon_n\)</span>.</li>
+<li><span class="math inline">\(\text{SST}=\text{TSS}=\sum_{i=1}^n\left(Y_i-\bar Y\right)^2\)</span>, the <strong>Total Sum of Squares</strong>. This is the <em>total variation</em> of <span class="math inline">\(Y_1,\ldots,Y_n\)</span>, since <span class="math inline">\(\text{SST}=ns_y^2\)</span>, where <span class="math inline">\(s_y^2\)</span> is the sample variance of <span class="math inline">\(Y_1,\ldots,Y_n\)</span>.</li>
+<li><span class="math inline">\(\text{SSR}=\text{ESS}=\sum_{i=1}^n\left(\hat Y_i-\bar Y\right)^2\)</span>, the <strong>Regression Sum of Squares</strong> or <strong>Explained Sum of Squares</strong><a href="#fn1" class="footnoteRef" id="fnref1"><sup>1</sup></a>. This is the variation explained by the regression line, that is, <em>the variation from <span class="math inline">\(\bar Y\)</span> that is explained by the estimated conditional mean <span class="math inline">\(\hat Y_i=\hat\beta_0+\hat\beta_1X_i\)</span></em>. <span class="math inline">\(\text{SSR}=ns_{\hat y}^2\)</span>, where <span class="math inline">\(s_{\hat y}^2\)</span> is the sample variance of <span class="math inline">\(\hat Y_1,\ldots,\hat Y_n\)</span>.</li>
+<li><span class="math inline">\(\text{SSE}=\text{RSS}=\sum_{i=1}^n\left(Y_i-\hat Y_i\right)^2\)</span>, the <strong>Sum of Squared Errors</strong> or <strong>Residual Sum of Squares</strong><a href="#fn2" class="footnoteRef" id="fnref2"><sup>2</sup></a>. Is the variation around the conditional mean. Recall that <span class="math inline">\(\text{SSE}=\sum_{i=1}^n \hat\varepsilon_i^2=(n-2)\hat\sigma^2\)</span>, where <span class="math inline">\(\hat\sigma^2\)</span> is the sample variance of <span class="math inline">\(\hat \varepsilon_1,\ldots,\hat \varepsilon_n\)</span>.</li>
 </ul>
 The ANOVA decomposition is
 <span class="math display">\[\begin{align*}
@@ -403,7 +403,15 @@ Note that the <strong>animation</strong> will not be displayed the first time it
 <iframe src="https://ec2-35-177-34-200.eu-west-2.compute.amazonaws.com/anova/?showcase=0" width="90%" height="900px">
 </iframe>
 <p>The ANOVA table summarizes the decomposition of the variance. Here is given in the layout employed by <code>R</code>.</p>
-<table>
+<table style="width:96%;">
+<colgroup>
+<col width="4%" />
+<col width="18%" />
+<col width="12%" />
+<col width="13%" />
+<col width="23%" />
+<col width="23%" />
+</colgroup>
 <thead>
 <tr class="header">
 <th></th>
@@ -418,16 +426,24 @@ Note that the <strong>animation</strong> will not be displayed the first time it
 <tr class="odd">
 <td>Predictor</td>
 <td><span class="math inline">\(1\)</span></td>
-<td>SSR</td>
-<td><span class="math inline">\(\frac{\text{SSR}}{1}\)</span></td>
+<td><span class="math inline">\(\text{SSR}=\sum_{i=1}^n\left(\hat Y_i-\bar Y\right)^2\)</span></td>
+<td><span class="math inline">\(\text{MSR}=\frac{\text{SSR}}{1}\)</span></td>
 <td><span class="math inline">\(\frac{\text{SSR}/1}{\text{SSE}/(n-2)}\)</span></td>
 <td><span class="math inline">\(p\)</span></td>
 </tr>
 <tr class="even">
 <td>Residuals</td>
 <td><span class="math inline">\(n - 2\)</span></td>
-<td>SSE</td>
-<td><span class="math inline">\(\frac{\text{SSE}}{n-2}\)</span></td>
+<td><span class="math inline">\(\text{SSE}=\sum_{i=1}^n\left(Y_i-\hat Y_i\right)^2\)</span></td>
+<td><span class="math inline">\(\text{MSE}=\frac{\text{SSE}}{n-2}\)</span></td>
+<td></td>
+<td></td>
+</tr>
+<tr class="odd">
+<td>Total</td>
+<td><span class="math inline">\(n-1\)</span></td>
+<td><span class="math inline">\(\text{SST}=\sum_{i=1}^n\left(Y_i-\bar Y\right)^2\)</span></td>
+<td></td>
 <td></td>
 <td></td>
 </tr>
@@ -450,7 +466,7 @@ F=\frac{\text{SSR}/1}{\text{SSE}/(n-2)}\stackrel{H_0}{\sim} F_{1,n-2},
 <h3><span class="header-section-number">1.7.2</span> The <span class="math inline">\(R^2\)</span> Statistic</h3>
 <p>To calculate <span class="math inline">\(R^2\)</span>, we use the formula</p>
 <p><span class="math display">\[ R^2 = \frac{\text{TSS} - \text{RSS}}{\text{TSS}} = 1- \frac{\text{RSS}}{\text{TSS}} \]</span></p>
-<p>where <span class="math inline">\(\text{TSS} = \sum (y_i - \bar{y})^2\)</span> is the <em>total sum of squared</em>.</p>
+<p>where <span class="math inline">\(\text{TSS} = \sum (y_i - \bar{y})^2\)</span> is the <em>total sum of squares</em>.</p>
 <p><span class="math inline">\(R^2\)</span> measures the <em>proportion of variability in</em> <span class="math inline">\(Y\)</span> <em>that can be explained using</em> <span class="math inline">\(X\)</span>. An <span class="math inline">\(R^2\)</span> statistic that is close to 1 indicates that a large proportion of the variability in the response has been explained by the regression. A number near 0 indicates that the regression did not explain much of the variability in the response; this might occur because the linear model is wrong, or the inherent error <span class="math inline">\(\sigma^2\)</span> is high, or both.</p>
 <p>It can be shown that in this simple linear linear regression setting that <span class="math inline">\(R^2 = r^2\)</span>, where <span class="math inline">\(r\)</span> is the correlation between <span class="math inline">\(X\)</span> and <span class="math inline">\(Y\)</span>:</p>
 <p><span class="math display">\[ r = \frac{cov(X,Y)}{\sigma_X \sigma_Y} \]</span></p>
@@ -478,7 +494,7 @@ A large <span class="math inline"><em>R</em><sup>2</sup></span> means <em>nothin
 <div class="footnotes">
 <hr />
 <ol start="1">
-<li id="fn1"><p>Recall that SSR is different from RSS (Residual Sum of Squares<a href="linear-regression.html#fnref1">↩</a></p></li>
+<li id="fn1"><p>Recall that SSR is different from RSS (Residual Sum of Squares)<a href="linear-regression.html#fnref1">↩</a></p></li>
 <li id="fn2"><p>Recall that SSE and RSS (for <span class="math inline">\((\hat \beta_0,\hat \beta_1)\)</span>) are just different names for referring to the same quantity: <span class="math inline">\(\text{SSE}=\sum_{i=1}^n\left(Y_i-\hat Y_i\right)^2=\sum_{i=1}^n\left(Y_i-\hat \beta_0-\hat \beta_1X_i\right)^2=\mathrm{RSS}\left(\hat \beta_0,\hat \beta_1\right)\)</span>.<a href="linear-regression.html#fnref2">↩</a></p></li>
 <li id="fn3"><p>The <span class="math inline">\(F_{n,m}\)</span> distribution arises as the quotient of two independent random variables <span class="math inline">\(\chi^2_n\)</span> and <span class="math inline">\(\chi^2_m\)</span>, <span class="math inline">\(\frac{\chi^2_n/n}{\chi^2_m/m}\)</span>.<a href="linear-regression.html#fnref3">↩</a></p></li>
 </ol>
